--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
-
+/* Basic reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Smooth scroll? */
+/* Smooth scrolling */
 html {
     scroll-behavior: smooth;
 }
 
+/* Section styling */
 section {
     height: 100vh; 
     display: flex;
@@ -35,9 +36,10 @@ header {
     gap: 20px;
 }
 
-
+/* Button styling */
 button {
     padding: 15px 30px;
+    width: 200px;
     font-size: 16px;
     font-weight: bold;
     border: none;
@@ -46,5 +48,22 @@ button {
     transition: background-color 0.3s ease;
 }
 
+.login-button {
+    background-color: #689C52;
+    color: white;
+}
+
+.login-button:hover {
+    background-color: #283C20;
+}
+
+.signup-button {
+    background-color: #689C52;
+    color: white;
+}
+
+.signup-button:hover {
+    background-color: #283C20
+}
 
 
